--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <link rel="stylesheet" href="./css/Anlimou_Tadjidine_2_code_01072025.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
